--- a/BIBSI/Web.config
+++ b/BIBSI/Web.config
@@ -56,4 +56,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="bibsiDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bibsi.mdf;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
