--- a/BIBSI/BIBSI.csproj
+++ b/BIBSI/BIBSI.csproj
@@ -151,12 +151,34 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BasvuruController.cs" />
+    <Compile Include="Controllers\FotografController.cs" />
     <Compile Include="Controllers\HesapController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IlanController.cs" />
+    <Compile Include="Controllers\IlceController.cs" />
+    <Compile Include="Controllers\IsArayanController.cs" />
+    <Compile Include="Controllers\IsDeneyimiController.cs" />
     <Compile Include="Controllers\IsVerenController.cs" />
+    <Compile Include="Controllers\KullaniciController.cs" />
+    <Compile Include="Controllers\MahalleController.cs" />
+    <Compile Include="Controllers\MeslekController.cs" />
+    <Compile Include="Controllers\PozisyonController.cs" />
+    <Compile Include="Controllers\SehirController.cs" />
+    <Compile Include="Controllers\SektorController.cs" />
+    <Compile Include="Controllers\SirketController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705021603223_InitialCreate.cs" />
+    <Compile Include="Migrations\201705021603223_InitialCreate.Designer.cs">
+      <DependentUpon>201705021603223_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705051236486_5-5-2017.cs" />
+    <Compile Include="Migrations\201705051236486_5-5-2017.Designer.cs">
+      <DependentUpon>201705051236486_5-5-2017.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aralik.cs" />
     <Compile Include="Models\Basvuru.cs" />
     <Compile Include="Models\Context.cs" />
@@ -178,7 +200,9 @@
     <Compile Include="Models\Sirket.cs" />
     <Compile Include="Models\SureModel.cs" />
     <Compile Include="Models\UyeGirisiModel.cs" />
+    <Compile Include="Models\YasAraligi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ModelViewer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -214,6 +238,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705021603223_InitialCreate.resx">
+      <DependentUpon>201705021603223_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705051236486_5-5-2017.resx">
+      <DependentUpon>201705051236486_5-5-2017.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
