--- a/BIBSI/BIBSI.csproj
+++ b/BIBSI/BIBSI.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Models\YasAraligi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ModelViewer.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -223,12 +224,12 @@
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\fonts\FontAwesome.otf" />
-    <Content Include="Views\Home\TumIlanlar.cshtml" />
     <Content Include="Views\Home\Iletisim.cshtml" />
     <Content Include="Views\Hesap\UyeGirisi.cshtml" />
     <Content Include="Views\Hesap\YeniUyelik.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
     <Content Include="Views\IsVeren\Index.cshtml" />
+    <Content Include="Views\Ilan\ListIlan.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
