--- a/BIBSI/BIBSI.csproj
+++ b/BIBSI/BIBSI.csproj
@@ -134,6 +134,7 @@
     <Content Include="Content\fonts\fontawesome-social-webfont.svg" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\images\anasayfa.jpg" />
     <Content Include="Content\images\bg01.png" />
     <Content Include="Content\images\CV.jpg" />
     <Content Include="Content\images\logo.png" />
